/**
 * Copyright (C) 2009-2015 Lightbend Inc. <http://www.lightbend.com>
 */

option java_package = "akka.remote";
option optimize_for = SPEED;

/******************************************
  ActorSelection related formats
*******************************************/

message SelectionEnvelope {
  required bytes enclosedMessage = 1;
  required int32 serializerId = 2;
  repeated Selection pattern = 3;
  optional bytes messageManifest = 4;
  optional bool wildcardFanOut = 5; // optional for pre 2.3.4 compatibility 
}

enum PatternType {
  PARENT = 0;
  CHILD_NAME = 1;
  CHILD_PATTERN = 2;
}

message Selection {
  required PatternType type = 1;
  optional string matcher = 2;
}

message Identify {
  required Payload messageId = 1;
}

message ActorIdentity {
  required Payload correlationId = 1;
  optional ActorRef ref = 2;
}

message ActorRef {
  required string path = 1;
}

message Payload {
  required bytes enclosedMessage = 1;
  required int32 serializerId = 2;
  optional bytes messageManifest = 4;
}
